# universum

./: .gitignore  .hlint.yaml  .travis.yml  .xrefcheck.yaml  CHANGES.md  CODEOWNERS  CONTRIBUTING.md  README.md  appveyor.yml  cabal.project.ci  stack-7.10.3.yaml  stack-8.0.2.yaml  stack-8.4.3.yaml  stack-8.8.1.yaml  stack.yaml  universum.cabal
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: ci.yml
benchmark/: Main.hs
prelude/: CHANGES.md  LICENSE  README.md  universum-prelude.cabal
prelude/src/: Prelude.hs  Unsafe.hs
src/: Exceptions.hs  Universum.hs
src/Universum/: Applicative.hs  Base.hs  Catstraints.hs  Container.hs  Debug.hs  DeepSeq.hs  Exception.hs  Function.hs  Lens.hs  Lifted.hs  Monad.hs  Monoid.hs  Nub.hs  Print.hs  String.hs  TypeOps.hs  Unsafe.hs  VarArg.hs
src/Universum/Bool/: Guard.hs  Reexport.hs
src/Universum/Container/: Class.hs  Reexport.hs  Utils.hs
src/Universum/Functor/: Fmap.hs  Reexport.hs
src/Universum/Lifted/: Concurrent.hs  Env.hs  File.hs  ST.hs
src/Universum/List/: Reexport.hs  Safe.hs
src/Universum/Monad/: Container.hs  Maybe.hs  Reexport.hs  Trans.hs
src/Universum/Print/: Internal.hs
src/Universum/String/: Conversion.hs  Reexport.hs
test/: Doctest.hs  Spec.hs  Tree.hs
test/Test/Universum/: BoolMProps.hs  Issue208.hs  ListProps.hs  Property.hs  StringProps.hs  UtfProps.hs
